@startuml RegisterClass
class AuthController {
  - IAccountService _accountService
  + Register() : IActionResult
  + Register(RegisterViewModel model) : Task<IActionResult>
}

interface IAccountService {
  + RegisterAsync(User user, string password) : Task<bool>
  + IsUsernameDuplicate(string username) : bool
  + IsEmailDuplicate(string email) : bool
}

class AccountService {
  - ApplicationDbContext _context
  + RegisterAsync(User user, string password) : Task<bool>
  + IsUsernameDuplicate(string username) : bool
  + IsEmailDuplicate(string email) : bool
  - HashPassword(string password) : string
}

class ApplicationDbContext {
  + DbSet<User> Users
  + SaveChangesAsync() : Task<int>
}

class User {
  + Id : int
  + Username : string
  + PasswordHash : string
  + Email : string
  + FullName : string
  + Role : Role
}

class RegisterViewModel {
  + Username : string
  + Password : string
  + ConfirmPassword : string
  + FullName : string
  + Email : string
}

AuthController --> IAccountService : uses
AccountService ..|> IAccountService : implements
AccountService --> ApplicationDbContext : uses
ApplicationDbContext --> User : manages
AuthController ..> RegisterViewModel : uses
@enduml
